# lifers

./: .gitignore  CLAUDE.md  README.md  bootstrap_lifers.bat  bootstrap_rs.bat  build_pillar_corpus.py  build_pillar_massive.py  download_books.py  expand_corpus_v2.py  gen_combinatorial.py  gen_industrial.py  gen_massive_en.py  gen_pillar_boost.py  gen_pillar_extra.py  gen_ultra_corpus.py  install.bat  install.sh  lifers.bat  lifers.code-workspace  link_lifers_junction.bat  monitor_training.sh  pyproject.toml  rs.code-workspace  run_lifers_agent.bat  run_lifers_vscodium.bat  scrape_runoob_fast.py  scrape_runoob_full.py  scrape_wikipedia.py  start_lifers.bat  sync_weights.sh
lifers/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  __main__.py  agent.py  audit.py  auth.py  bridge_turn.py  cluster.py  constants.py  daily_intents.py  deep_transformer.py  deep_transformer_train.py  docker-compose.yml  exp_eval_report.json  exp_smoke.json  fix_inference_prompt.py  fleet.py  function_calling_schema.py  health.py  instincts.py  llm_ops_context.py  local_brain.py  lora_finetune.py  markov_lm.py  memory.py  model_names.py  model_registry.py  npc_engine.py  openai_compat_chat.py  openclaw_compat.py  organ_system.py  planner.py  plugin_loader.py  pyproject.toml  pyrightconfig.json  realtime_anchor.py  requirements.txt  (+19 more)
lifers/audio/: __init__.py
lifers/config/: capability_queue.json  claw_code_rust_vendor.json  domains.json  lifers_ai_pipeline.json  lifers_ai_playbook_zh.md  lifers_llm_bootstrap.json  lifers_vendor_map.json  omni_ai_prompts.py  openclaw_manifest.json  openclaw_upstream_vendor.json  organ_capabilities.json  secrets.env.example  stack.json  tokenizer.json
lifers/core/: compute_backend.py  hardware_profile.py  inference_router.py  input_validator.py  organ_system.py  output_formatter.py  (+2 more)
(+437 files in other folders)
