[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lifers"
version = "0.2.0"
description = "Lifers - local AI terminal assistant"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "rich>=13.0",
]

[project.optional-dependencies]
vector = [
    "faiss-cpu>=1.7",
    "chromadb>=0.4",
    "lancedb>=0.15",
    "sentence-transformers>=2.2",
]
faiss = ["faiss-cpu>=1.7"]
chroma = ["chromadb>=0.4"]
lancedb = ["lancedb>=0.15"]
embeddings = ["sentence-transformers>=2.2"]
license = {text = "MIT"}

[project.scripts]
lifers = "lifers.scripts.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lifers", "lifers.*"]
