[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lifers"
version = "0.2.0"
description = "Lifers — 本地 AI 终端助手"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "rich>=13.0",
]
license = {text = "MIT"}
authors = [{name = "Lifeline"}]

[project.scripts]
lifers = "lifers.scripts.cli:main"

[tool.setuptools]
packages = ["lifers", "lifers.scripts"]
[tool.setuptools.package-dir]
"lifers" = "."
"lifers.scripts" = "scripts"

[tool.ruff]
line-length = 100
